--- a/src/GLideNUI/configDialog.ui
+++ b/src/GLideNUI/configDialog.ui
@@ -165,6 +165,9 @@
                <height>0</height>
               </size>
              </property>
+             <property name="toolTip">
+              <string>When enabled, the image is cropped by values specified in N64 pixels. Useful to remove black borders in some games.</string>
+             </property>
              <layout class="QVBoxLayout" name="verticalLayout_18">
               <property name="spacing">
                <number>5</number>
@@ -184,7 +187,7 @@
               <item>
                <widget class="QCheckBox" name="overscanCheckBox">
                 <property name="text">
-                 <string>Reduce overscan</string>
+                 <string>Overscan</string>
                 </property>
                </widget>
               </item>
@@ -4004,10 +4007,10 @@
   </connection>
  </connections>
  <buttongroups>
+  <buttongroup name="screenshotButtonGroup"/>
   <buttongroup name="factorButtonGroup"/>
+  <buttongroup name="osdButtonGroup"/>
   <buttongroup name="aspectButtonGroup"/>
   <buttongroup name="fixTexrectCoordsButtonGroup"/>
-  <buttongroup name="screenshotButtonGroup"/>
-  <buttongroup name="osdButtonGroup"/>
  </buttongroups>
 </ui>
